# malyarov_hw_django_eshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
myenv/: pyvenv.cfg
myproject/blog/: forms.py  models.py  urls.py  views.py
myproject/blog/migrations/: 0001_initial.py  0002_alter_blogpost_preview.py
myproject/blog/templates/blog/: confirm_delete.html  form.html  list.html  post_detail.html  post_form.html  post_list.html
myproject/catalog/: admin.py  forms.py  models.py  urls.py  views.py
myproject/catalog/fixtures/: categories.json
myproject/catalog/management/commands/: populate_db.py
myproject/catalog/migrations/: 0001_initial.py  0002_post.py  0003_version.py  0004_alter_version_options.py
myproject/catalog/templates/: add_product.html  base.html  contact.html  header.html  home.html  menu.html  product_detail.html  product_list.html
myproject/catalog/templatetags/: custom_tags.py
myproject/myproject/: .env.sample  settings.py  urls.py
myproject/user_app/: apps.py  forms.py  models.py  services.py  urls.py  views.py
myproject/user_app/migrations/: 0001_initial.py  context_processors.py
myproject/user_app/templates/: login.html
