[tool.poetry]
name = "malyarov-hw-django-eshop"
version = "0.1.0"
description = ""
authors = ["Sergey Malyarov <sergey@malyaroff.com>"]
readme = "README.md"
packages = [{include = "malyarov_hw_django_eshop"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

